@@ -1,3 +1,15 @@
+2011-07-18  Don Porter  <dgp@users.sourceforge.net>
+
+	* README:		Bump version number to 8.6b2
+	* generic/tk.h:
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2011-06-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/ttk/ttkTrace.c: [Bug 3341056] Correct segfault due to flaw
